--- a/src/components/YoutubeSearch.module.css
+++ b/src/components/YoutubeSearch.module.css
@@ -6,6 +6,10 @@
   height: 844px;
   background: linear-gradient(to bottom, #a8a8a8, #7a7979);
   overflow: auto;
+  box-shadow: 0.1px 0.3px 6.1px rgba(0, 0, 0, 0.018), 0.3px 0.6px 14.1px rgba(0, 0, 0, 0.026),
+    0.6px 1.2px 25.3px rgba(0, 0, 0, 0.032), 1px 1.9px 42.1px rgba(0, 0, 0, 0.038),
+    1.6px 3.2px 69.3px rgba(0, 0, 0, 0.044), 2.8px 5.5px 121.1px rgba(0, 0, 0, 0.052),
+    6px 12px 262px rgba(0, 0, 0, 0.07);
 }
 
 /* 스크롤바 전체 스타일 */
@@ -63,7 +67,7 @@
   text-decoration: none;
   color: #fff;
   position: relative;
-  right: 90px;
+  right: 70px;
   top: 15px;
   background-color: #778; /* 중간 톤의 회색으로 배경 설정 */
   border-radius: 20px;
@@ -133,4 +137,24 @@ h3 {
 .icon {
   font-size: 80px;
   margin-top: 280px;
+}
+
+.favoritebtn {
+  text-decoration: none;
+  color: #fff;
+  position: relative;
+  right: 50px;
+  top: 15px;
+  background-color: #778; /* 중간 톤의 회색으로 배경 설정 */
+  border-radius: 20px;
+  padding: 10px;
+  transition: 0.3s;
+  font-size: 15px;
+  font-family: 'Noto Sans KR', sans-serif;
+}
+
+.modal {
+}
+
+.favoriteexit {
 }
