--- a/src/components/YoutubeSearch.module.css
+++ b/src/components/YoutubeSearch.module.css
@@ -5,10 +5,12 @@
   height: 844px;
   background: linear-gradient(to bottom, #a8a8a8, #7a7979);
   overflow: auto;
-  box-shadow: 0.1px 0.3px 6.1px rgba(0, 0, 0, 0.018), 0.3px 0.6px 14.1px rgba(0, 0, 0, 0.026),
-    0.6px 1.2px 25.3px rgba(0, 0, 0, 0.032), 1px 1.9px 42.1px rgba(0, 0, 0, 0.038),
-    1.6px 3.2px 69.3px rgba(0, 0, 0, 0.044), 2.8px 5.5px 121.1px rgba(0, 0, 0, 0.052),
-    6px 12px 262px rgba(0, 0, 0, 0.07);
+  box-shadow: 0.1px 0.3px 6.1px rgba(0, 0, 0, 0.018),
+    0.3px 0.6px 14.1px rgba(0, 0, 0, 0.026),
+    0.6px 1.2px 25.3px rgba(0, 0, 0, 0.032),
+    1px 1.9px 42.1px rgba(0, 0, 0, 0.038),
+    1.6px 3.2px 69.3px rgba(0, 0, 0, 0.044),
+    2.8px 5.5px 121.1px rgba(0, 0, 0, 0.052), 6px 12px 262px rgba(0, 0, 0, 0.07);
 }
 
 .nav {
@@ -40,7 +42,7 @@
 }
 
 .searchTEXT {
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   margin-top: 20px;
   height: 30px;
   width: 200px;
@@ -52,7 +54,7 @@
 }
 
 .searchBTN {
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   height: 36px;
   padding: 0 15px;
   border-left: none;
@@ -81,7 +83,7 @@
   background-color: #778; /* 중간 톤의 회색으로 배경 설정 */
   border-radius: 20px;
   transition: 0.3s;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 .link:hover {
@@ -104,12 +106,12 @@ h3 {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   cursor: pointer;
 }
 
 .add {
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   background-color: #778;
   border-radius: 20px;
   padding: 9px;
@@ -130,7 +132,7 @@ h3 {
   margin-right: 10px;
   margin-bottom: 20px;
   margin-top: 20px;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   background-color: #778;
   border-radius: 20px;
   padding: 10px;
@@ -161,7 +163,7 @@ h3 {
   font-size: 13px;
   margin-bottom: 10px;
   transition: 0.3s;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 .favoritebtn:hover {
@@ -202,7 +204,7 @@ h3 {
   top: 25px;
   right: 50px;
   color: #fff;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   font-weight: bold;
 }
 
@@ -217,7 +219,7 @@ h3 {
 .favoritedelite {
   color: #fff;
   height: 20px;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   margin-top: 18px;
   font-size: 17px;
 }
@@ -260,4 +262,10 @@ h2 {
 
 .result {
   margin-top: 120px;
+}
+
+.txt {
+  margin: 0;
+  font-size: 13px;
+  color: #ededed;
 }
