--- a/src/components/YoutubeSearch.module.css
+++ b/src/components/YoutubeSearch.module.css
@@ -2,7 +2,7 @@
   margin: 37px auto;
   text-align: center;
   width: 390px;
-  height: 844px;
+  height: 33vw;
   background: linear-gradient(to bottom, #a8a8a8, #7a7979);
   overflow: auto;
   box-shadow: 0.1px 0.3px 6.1px rgba(0, 0, 0, 0.018),
